redis/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-celery-svc
  namespace: agricore
spec:
  selector:
    app: redis-celery-broker
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: fom-redis-ingress
  namespace: agricore
spec:
  entryPoints:
    - websecure
  routes:
    - match: # TO_MODIFY: Replace with the correct HostSNI (e.g., fom-redis.<your-domain>))
      services:
        - name: redis-celery-svc
          port: 6379
  tls:
    secretName: tls-fom-apiserver-redis
